# auth_database

./: .gitmodules  CMakeLists.txt  auth_chat.proto  auth_database.proto  build64.bat  compile  copyhost  copytesthost  main.cpp  ppos.proto  process_web_command.cpp  re_cmake64.bat  static_definition.cpp
DB/: activityTrackkerDB.cpp  activityTrackkerDB.h  activityTrackkerDB_checkStructure.cpp  activityTrackkerDB_schema.cpp  authDB.cpp  authDB.h  authDB_FCM.cpp  authDB_checkStructure.cpp  authDB_db.cpp  authDB_folder.cpp  authDB_schema.cpp  authDB_token.cpp  authDB_users.cpp
PPOS_Client/: gRPC_Client.cpp  gRPC_Client.h
Services/: AuthChatService.cpp  AuthChatService.h  AuthenticationService.h  AuthenticationService_config.cpp  AuthenticationService_db.cpp  AuthenticationService_metadata.cpp  AuthenticationService_participant.cpp  AuthenticationService_session.cpp  GetSession.cpp  GetSession.h
py/: check.py  checktoken.py  checktoken.spec  compile  sendnotification.py  sendnotification.spec  test2.py  testcmd.py  testnotification.py
